<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_c">c</string>
    <string name="txt_o">o</string>
    <string name="txt_25">25</string>
    <string name="txt_clear_sky">Clear Sky</string>
    <string name="txt_humidity">Humidity: </string>
    <string name="txt_desc">Description</string>
    <string name="txt_wind_speed">Wind Speed:</string>
    <string name="txt_name">Name</string>
    <string name="txt_max_temp">Max. Temp.:</string>
    <string name="txt_min_temp">Min. Temp.:</string>

</resources>