<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_icon"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="48dp"
            android:layout_height="48dp"/>

        <TextView
            android:id="@+id/txt_name"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/img_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_temp_title"
            android:textSize="12sp"
            android:text="Current Temperature: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintStart_toEndOf="@id/img_icon"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_temp"
            app:layout_constraintStart_toEndOf="@id/txt_temp_title"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_temp"
                android:text="@string/txt_25"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_o"
                android:text="@string/txt_o"
                android:fontFamily="@font/roboto_regular"
                android:textSize="8sp"
                android:textColor="@color/black"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/txt_temp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/txt_c"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toEndOf="@id/txt_temp"
                app:layout_constraintTop_toTopOf="@id/txt_temp"
                app:layout_constraintBottom_toBottomOf="@id/txt_temp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/img_temp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="48dp"
            android:layout_height="48dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>