<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/top_toolbar"
                layout="@layout/toolbar"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <fragment
                        android:id="@+id/map_fragment"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:context=".fragments.MapFragment">

                    </fragment>

                    <TextView
                        android:id="@+id/txt_name"
                        android:text="@string/txt_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/map_fragment"/>

                    <TextView
                        android:id="@+id/txt_desc"
                        android:text="@string/txt_desc"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_name"/>

                    <TextView
                        android:id="@+id/txt_humidity"
                        android:text="@string/txt_humidity"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_desc"/>

                    <TextView
                        android:id="@+id/txt_wind_speed"
                        android:text="@string/txt_wind_speed"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_humidity"/>

                    <TextView
                        android:id="@+id/txt_max_temp"
                        android:text="@string/txt_max_temp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_wind_speed"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_max_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintStart_toEndOf="@id/txt_max_temp"
                        app:layout_constraintTop_toTopOf="@id/txt_max_temp"
                        app:layout_constraintBottom_toBottomOf="@id/txt_max_temp">

                        <TextView
                            android:id="@+id/max_txt_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_25"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/max_txt_o"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_o"
                            android:textColor="@color/black"
                            android:layout_marginStart="2dp"
                            android:textSize="10sp"
                            app:layout_constraintStart_toEndOf="@id/max_txt_temp"
                            app:layout_constraintTop_toTopOf="@id/max_txt_temp"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_c"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@id/max_txt_temp"
                            app:layout_constraintStart_toEndOf="@id/max_txt_o"
                            app:layout_constraintTop_toTopOf="@id/max_txt_temp">

                        </TextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/txt_min_temp"
                        android:text="@string/txt_min_temp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_max_temp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_min_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintStart_toEndOf="@id/txt_min_temp"
                        app:layout_constraintTop_toTopOf="@id/txt_min_temp"
                        app:layout_constraintBottom_toBottomOf="@id/txt_min_temp">

                        <TextView
                            android:id="@+id/min_txt_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_25"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/min_txt_o"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_o"
                            android:textColor="@color/black"
                            android:layout_marginStart="2dp"
                            android:textSize="10sp"
                            app:layout_constraintStart_toEndOf="@id/min_txt_temp"
                            app:layout_constraintTop_toTopOf="@id/min_txt_temp"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_c"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@id/min_txt_temp"
                            app:layout_constraintStart_toEndOf="@id/min_txt_o"
                            app:layout_constraintTop_toTopOf="@id/min_txt_temp">

                        </TextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_temp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/map_fragment"
                        android:layout_marginEnd="80dp"
                        android:layout_marginTop="24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_temp"
                            android:text="@string/txt_25"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/txt_o"
                            android:text="@string/txt_o"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="12sp"
                            android:layout_marginStart="2dp"
                            app:layout_constraintStart_toEndOf="@id/txt_temp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text="@string/txt_c"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:fontFamily="@font/roboto_regular"
                            app:layout_constraintStart_toEndOf="@id/txt_temp"
                            app:layout_constraintTop_toTopOf="@id/txt_temp"
                            app:layout_constraintBottom_toBottomOf="@id/txt_temp"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/img_icon"
                        app:layout_constraintTop_toBottomOf="@id/layout_temp"
                        app:layout_constraintStart_toStartOf="@id/layout_temp"
                        app:layout_constraintEnd_toEndOf="@id/layout_temp"
                        android:layout_marginTop="8dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp">

                    </ImageView>





                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>